--- a/jenkinsfile
+++ b/jenkinsfile
@@ -12,6 +12,13 @@ pipeline {
         }
       }
     }
+    /* stage ('sonarQube Analysis') {
+			steps {
+				withSonarQubeEnv('sonarQube') {
+					bat 'mvn clean verify sonar:sonar -Dsonar.projectKey=ventas'
+				}
+			}
+		}*/
     stage ('Testing Stage') {
        steps {
          withMaven(maven : 'MAVEN_3_6_3') {
@@ -19,6 +26,7 @@ pipeline {
          }
        }
     }
+
     stage ('package Stage') {
       steps {
         withMaven(maven : 'MAVEN_3_6_3') {
@@ -26,5 +34,18 @@ pipeline {
         }
       }
     }
+
+    /* // Descomentar cuando se tenga instalado en Tomcat
+		stage('Deploy tomcat') {
+            steps {
+                echo "Running ${env.BUILD_ID} on ${env.JENKINS_URL} direcion ${env.WORKSPACE}"	
+                withMaven(maven : 'MAVEN_3_6_3') {
+					bat '"C:\\Program Files\\Git\\mingw64\\bin\\curl.exe" -T ".\\target\\sistema-ventas-spring.war" "http://tomcat:tomcat@localhost:9090/manager/text/deploy?path=/sistema-ventas-spring&update=true"'
+                } 
+            }
+        }*/
+
+
+
   }
 }
