new jenkins version

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ server.port=30001
 spring.datasource.username=root
 #spring.datasource.username=postgres
 #ACTUALIZAR CON DATOS DE TU BASE DE DATOS POSTGRESS
-spring.datasource.password=admin
+spring.datasource.password=root
 spring.jpa.properties.database_platform=org.hibernate.dialect.MySQL8Dialect
 
 #spring.datasource.password=1234
