--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,7 +1,7 @@
 
-spring.datasource.url=jdbc:mysql://localhost:3306/BeTripDb
+spring.datasource.url=jdbc:mysql://localhost:3306/betripdb
 spring.datasource.username=root
-spring.datasource.password=admin
+spring.datasource.password=root
 spring.jpa.properties.database_platform=org.hibernate.dialect.MySQL8Dialect
 
 spring.jpa.hibernate.ddl-auto=update
